--- a/css/style.css
+++ b/css/style.css
@@ -215,15 +215,6 @@ body {
   row-gap: 0.625rem;
 }
 
-.menu__list_pc .menu__item {
-  color: #fff;
-  font-weight: 600;
-  line-height: 1;
-  /* 100% */
-  -webkit-transition: color 0.3s;
-  transition: color 0.3s;
-}
-
 .menu__list_mobile {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -280,6 +271,15 @@ body {
   width: 100vw;
   height: 0.03125rem;
   background-color: rgba(255, 255, 255, 0.2);
+}
+
+.menu__link {
+  color: #fff;
+  font-weight: 600;
+  line-height: 1;
+  /* 100% */
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
 }
 
 .menu__socials {
@@ -352,6 +352,226 @@ body {
 
 .icon-menu {
   display: none;
+}
+
+.service-menu__wrapper {
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  visibility: hidden;
+  -webkit-transform: scale(0.5);
+      -ms-transform: scale(0.5);
+          transform: scale(0.5);
+  opacity: 0;
+  z-index: 50;
+  padding-top: 1.5rem;
+  background-color: #131923;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  top: 95px;
+  left: 0;
+  max-width: 82.5rem;
+  padding-left: 0.9375rem;
+  padding-right: 0.9375rem;
+  margin: 0 auto;
+}
+
+.service-menu-open .service-menu__wrapper {
+  opacity: 1;
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
+  visibility: visible;
+}
+
+.service-menu__wrapper::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  width: 16.875rem;
+  background: url("../img/menu-bg.png") 0 90%/100% no-repeat;
+}
+
+.service-menu__btn {
+  color: #fff;
+  font-weight: 600;
+  line-height: 1;
+  /* 100% */
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+}
+
+.service-menu__list {
+  display: -ms-grid;
+  display: grid;
+  -ms-flex-line-pack: start;
+      align-content: start;
+  row-gap: 1.5rem;
+  width: 16.875rem;
+  height: 100%;
+  border-right: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.service-menu__item {
+  width: 16.875rem;
+  padding-bottom: 1.5rem;
+}
+
+.service-menu__item:not(:last-child) {
+  border-bottom: 0.0125rem solid #a0a0a0;
+}
+
+.service-menu__link {
+  position: relative;
+  z-index: 1;
+  padding-right: 1.5rem;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1;
+  /* 100% */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+
+.service-menu__link::before {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  font-size: 0.75rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transform: rotate(-55deg);
+      -ms-transform: rotate(-55deg);
+          transform: rotate(-55deg);
+  width: 40px;
+  height: 40px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+}
+
+.service-menu__content {
+  display: none;
+  overflow-y: auto;
+  /* Включаем вертикальный скролл */
+  max-height: 80%;
+  padding-top: 1.5rem;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  padding-left: 19.375rem;
+  row-gap: 1.25rem;
+  -webkit-column-gap: 1.3125rem;
+     -moz-column-gap: 1.3125rem;
+          column-gap: 1.3125rem;
+  grid-template-columns: repeat(auto-fit, 235px);
+}
+
+.service-menu__content::-webkit-scrollbar {
+  display: none;
+}
+
+.service-menu__category {
+  display: -ms-grid;
+  display: grid;
+  -ms-flex-line-pack: start;
+      align-content: start;
+  row-gap: 2rem;
+}
+
+.service-menu__image {
+  overflow: hidden;
+  border-radius: 1.25rem;
+  position: relative;
+  aspect-ratio: 240/120;
+}
+
+.service-menu__image img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.service-menu__image::after {
+  content: "";
+  position: absolute;
+  top: 0%;
+  /* позиционирование относительно нижней части родителя */
+  left: 50%;
+  /* центрирование треугольника */
+  -webkit-transform: translate(-50%, 0px);
+      -ms-transform: translate(-50%, 0px);
+          transform: translate(-50%, 0px);
+  background: url("../img/triangle.svg") 0 0/100% no-repeat;
+  width: 2.125rem;
+  height: 0.375rem;
+  z-index: 2;
+}
+
+.service-menu__image::before {
+  content: "";
+  position: absolute;
+  bottom: 0%;
+  /* позиционирование относительно нижней части родителя */
+  left: 50%;
+  /* центрирование треугольника */
+  -webkit-transform: translate(-50%, 0px) rotate(180deg);
+      -ms-transform: translate(-50%, 0px) rotate(180deg);
+          transform: translate(-50%, 0px) rotate(180deg);
+  background: url("../img/triangle.svg") 0 0/100% no-repeat;
+  width: 2.125rem;
+  height: 0.375rem;
+  z-index: 2;
+}
+
+.service-menu__title {
+  color: #fff;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1;
+  /* 100% */
+}
+
+.service-menu__links {
+  display: -ms-grid;
+  display: grid;
+  row-gap: 1.5rem;
+}
+
+.service-menu__sub-link {
+  color: rgba(255, 255, 255, 0.6);
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .ibg {
@@ -454,6 +674,17 @@ body {
   top: 0;
   left: 0;
   z-index: 50;
+}
+
+.service-menu-open .header::after {
+  content: "";
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: 20;
+  top: 95px;
+  left: 0;
+  background-color: #131923;
 }
 
 .header__container {
@@ -955,7 +1186,11 @@ details > summary::-webkit-details-marker {
             column-gap: 2.5rem;
   }
 
-  .menu__list_pc .menu__item {
+  .menu__link {
+    font-size: 1rem;
+  }
+
+  .service-menu__btn {
     font-size: 1rem;
   }
 
@@ -997,7 +1232,11 @@ details > summary::-webkit-details-marker {
             column-gap: 1.25rem;
   }
 
-  .menu__list_pc .menu__item {
+  .menu__link {
+    font-size: 0.875rem;
+  }
+
+  .service-menu__btn {
     font-size: 0.875rem;
   }
 
@@ -1264,13 +1503,25 @@ details > summary::-webkit-details-marker {
 }
 
 @supports (font-size: clamp( 0.875rem , 0.5982142857rem  +  0.4464285714vw , 1rem )) {
-    .menu__list_pc .menu__item {
+    .menu__link {
       font-size: clamp( 0.875rem , 0.5982142857rem  +  0.4464285714vw , 1rem );
     }
 }
 
 @supports not (font-size: clamp( 0.875rem , 0.5982142857rem  +  0.4464285714vw , 1rem )) {
-    .menu__list_pc .menu__item {
+    .menu__link {
+      font-size: calc(0.875rem + 0.125 * (100vw - 62rem) / 28);
+    }
+}
+
+@supports (font-size: clamp( 0.875rem , 0.5982142857rem  +  0.4464285714vw , 1rem )) {
+    .service-menu__btn {
+      font-size: clamp( 0.875rem , 0.5982142857rem  +  0.4464285714vw , 1rem );
+    }
+}
+
+@supports not (font-size: clamp( 0.875rem , 0.5982142857rem  +  0.4464285714vw , 1rem )) {
+    .service-menu__btn {
       font-size: calc(0.875rem + 0.125 * (100vw - 62rem) / 28);
     }
 }
@@ -1461,8 +1712,29 @@ details > summary::-webkit-details-marker {
 }
 
 @media (any-hover: hover) {
-  .menu__list_pc .menu__item:hover {
+  .menu__link:hover {
     color: #78dccd;
+  }
+
+  .service-menu__btn:hover {
+    color: #78dccd;
+  }
+
+  .service-menu-open .service-menu__item:hover .service-menu__link::before {
+    -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+            transform: rotate(0deg);
+    background-color: #1e78ff;
+    border: 1px solid #1e78ff;
+  }
+
+  .service-menu-open .service-menu__item:hover .service-menu__content {
+    display: -ms-grid;
+    display: grid;
+  }
+
+  .service-menu__sub-link:hover {
+    color: rgba(255, 255, 255, 0.9);
   }
 
   .footer__tg:hover,
