--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,7 @@ body {
 }
 
 .menu__socials {
+  min-height: 68px;
   overflow: hidden;
   margin-right: -0.9375rem;
   margin-left: -0.9375rem;
@@ -810,10 +811,9 @@ body {
           transform: translate(0, -50%);
   left: 0%;
   background-color: #131923;
-  border-radius: 1.25rem;
   padding: 1.25rem;
-  border-bottom: 0.0625rem solid rgba(255, 255, 255, 0.2);
-  color: #666;
+  border: 0.0625rem solid rgba(255, 255, 255, 0.2);
+  color: #fff;
 }
 
 .search-open .search__input::-webkit-input-placeholder {
@@ -1400,9 +1400,20 @@ details > summary::-webkit-details-marker {
     min-height: 4.5rem;
   }
 
+  .header__tel {
+    width: 100%;
+    height: 100%;
+  }
+
   .search {
-    padding-left: 1.875rem;
-    padding-right: 0.9375rem;
+    width: 4.4375rem;
+    margin-right: -0.9375rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 
   .search::after {
@@ -1412,6 +1423,11 @@ details > summary::-webkit-details-marker {
     left: 0;
     background-color: rgba(255, 255, 255, 0.2);
     width: 0.03125rem;
+    height: 100%;
+  }
+
+  .search__btn {
+    width: 100%;
     height: 100%;
   }
 
