--- a/css/style.css
+++ b/css/style.css
@@ -787,6 +787,7 @@ body {
 }
 
 .search {
+  overflow: hidden;
   -ms-flex-item-align: stretch;
       -ms-grid-row-align: stretch;
       align-self: stretch;
