--- a/css/style.css
+++ b/css/style.css
@@ -285,47 +285,12 @@ body {
 }
 
 .menu__socials {
-  min-height: 68px;
-  overflow-x: hidden;
   margin-right: -0.9375rem;
   margin-left: -0.9375rem;
+  min-height: 68px;
+  overflow-x: hidden;
   margin-top: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
   position: relative;
-}
-
-.menu__socials > * {
-  padding: 1.5rem;
-}
-
-.menu__socials > *:not(:first-child)::after {
-  content: "";
-  position: absolute;
-  width: 0.5px;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: rgba(255, 255, 255, 0.2);
-}
-
-.menu__socials::before {
-  margin-left: -15px;
-  margin-right: -15px;
-  content: "";
-  position: absolute;
-  width: 105vw;
-  background-color: rgba(255, 255, 255, 0.2);
-  height: 0.03125rem;
-  top: 0;
-  left: 0;
 }
 
 .menu__tel {
@@ -357,6 +322,45 @@ body {
   position: relative;
   color: #fff;
   font-size: 1.25rem;
+}
+
+.socials-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  position: relative;
+}
+
+.socials-wrapper::before {
+  margin-left: -15px;
+  margin-right: -15px;
+  content: "";
+  position: absolute;
+  width: 100vw;
+  background-color: rgba(255, 255, 255, 0.2);
+  height: 0.03125rem;
+  top: 0;
+  left: 0;
+}
+
+.socials-wrapper > * {
+  padding: 1.5rem;
+}
+
+.socials-wrapper > *:not(:first-child)::after {
+  content: "";
+  position: absolute;
+  width: 0.5px;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 .icon-menu {
